<resources>
    <string name="app_name">Emex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Network View</string>
    <string name="nav_photos">Payment</string>
    <string name="nav_movies">Job History</string>
    <string name="nav_notifications">Emergency Contact</string>
    <string name="nav_settings">Help</string>
    <string name="nav_about_us">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="date">14 June, 2016 04:23</string>
    <string name="distance">5.6km</string>
    <string name="dname">Driver Name: Suresh Kumar</string>
    <string name="addone">3846 W 38 Rd,Srishti Marg"</string>
    <string name="state">Mumbai</string>
    <string name="addtwo">Silver Oks Hospital, Laxmi Nagar,</string>
    <string name="ridetime">Ride Time: 20 min</string>
    <string name="amountTitle">Total Payable Amount</string>
    <string name="amount">Rs. 1832</string>

</resources>
