<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/missed_job_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="end"
                    android:text="@string/distance"
                    android:textColor="@color/colorPrimaryDark"

                    />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Warmgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="9dp">

                <LinearLayout
                    android:id="@+id/templay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/subs_green_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/dot_green"
                        android:visibility="gone" />

                    <View
                        android:id="@+id/green_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/dot_red" />

                    <View
                        android:id="@+id/vertical_view"
                        android:layout_width="1dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/Black" />

                    <View
                        android:id="@+id/red_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/dot_green"

                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="6dp"
                    android:paddingLeft="11dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/dname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dname"
                        android:textColor="@color/Black"


                        />

                    <TextView
                        android:id="@+id/addressone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addone"

                        />

                    <TextView
                        android:id="@+id/stateone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state"

                        />

                    <TextView
                        android:id="@+id/addresstwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addtwo"


                        />

                    <TextView
                        android:id="@+id/statetwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state"

                        />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/rideTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/ridetime"

                    />

                <View
                    android:id="@+id/simple_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Warmgrey" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/payment_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/amountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/amountTitle"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="end"
                    android:text="@string/amount"
                    android:textColor="@color/colorPrimaryDark"

                    />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>